tests/compile_fail/borrow/struct_attr_multiple_fields.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo {
    bar: i32,
    baz: f32,
}

fn main() {}
