tests/compile_fail/borrow/struct_attr_multiple_fields.stderr
error: `Borrow` can only be derived for structs with exactly one field
 --> tests/compile_fail/borrow/struct_attr_multiple_fields.rs:3:12
  |
3 |   struct Foo {
  |  ____________^
4 | |     bar: i32,
5 | |     baz: f32,
6 | | }
  | |_^
